--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -1,3 +1,5 @@
+@import "./icons.scss";
+
 :root {
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
@@ -51,7 +53,7 @@ body {
   cursor: pointer;
   background-repeat: no-repeat;
   background-position: 28px 16px;
-  background-image: url('../img/add.svg');
+  background-image: getIcon(add);
 }
 .add-todo__button:focus {
   outline: none;
@@ -104,11 +106,11 @@ body {
   position: relative;
   background-repeat: no-repeat;
   background-position: 28px 16px;
-  background-image: url('../img/box.svg');
+  background-image: getIcon(box);
 }
 .todo-list__item--completed {
   color: #16a085;
-  background-image: url('../img/done.svg');
+  background-image: getIcon(done);
 }
 .todo-transition-enter {
   height: 0;
