--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -1,15 +1,22 @@
 @import "./_icons.scss";
+@import "./_add-todo.scss";
+@import "./_todo-list.scss";
+@import "./_todo-transition.scss";
+@import "./_filter.scss";
+@import "./variables.scss";
 
 :root {
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
 }
+
 body {
   background: #bdc3c7;
   margin: 0;
   font-family: 'Open Sans', sans-serif;
 }
+
 .container {
   display: flex;
   flex-direction: column;
@@ -22,6 +29,7 @@ body {
   margin: 0 auto;
   overflow: hidden;
 }
+
 .app {
   display: flex;
   flex-direction: column;
@@ -33,189 +41,13 @@ body {
   box-shadow: 0 0 2px 1px rgba(0,0,0,0.2);
   max-width: calc(100% - 20px);
 }
-.add-todo {
-  width: 100%;
-  background: #ecf0f1;
-  position: relative;
-  height: 80px;
-  margin: 2px 0 1px;
-}
-.add-todo__button {
-  position: absolute;
-  display: inline-block;
-  width: 60px;
-  height: 100%;
-  background: transparent;
-  color: rgba(0, 0, 0, 0);
-  border: 0;
-  left: 0;
-  top: 0;
-  cursor: pointer;
-  background-repeat: no-repeat;
-  background-position: 28px 16px;
-  background-image: getIcon(add);
-}
-.add-todo__button:focus {
-  outline: none;
-}
-.add-todo__input {
-  border: 0;
-  font-size: 1rem;
-  height: 100%;
-  background: transparent;
-  box-sizing: border-box;
-  padding-left: 80px;
-  width: 100%;
-  color: #666666;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-weight: 600;
-}
-.add-todo__input:focus {
-  outline: none;
-  background: rgba(0,0,0,0.05)
-}
-.add-todo__input::placeholder {
-  color: #b3b3b3;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  opacity:  1;
-}
-.todo-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  cursor: pointer;
-}
-.todo-list {
-  display: flex;
-  flex-direction: column-reverse;
-}
-[class^="todo-list__item"] {
-  box-shadow: 0 -1px 0 0 white, 0 -2px 0 0 #e6e6e6;
-  height: 80px;
-  overflow: hidden;
-  box-sizing: border-box;
-  display: block;
-  padding: 0 33px 0 78px;
-  line-height: 80px;
-  text-transform: uppercase;
-  color: #af544f;
-  letter-spacing: 2px;
-  position: relative;
-  background-repeat: no-repeat;
-  background-position: 28px 16px;
-  background-image: getIcon(box);
-}
-.todo-list__item--completed {
-  color: #16a085;
-  background-image: getIcon(done);
-}
-.todo-transition-enter {
-  height: 0;
-}
-.todo-transition-enter.todo-transition-enter-active {
-  height: 80px;
-  transition: height 70ms ease-in;
-}
-.todo-transition-leave {
-  height: 80px;
-}
-.todo-transition-leave.todo-transition-leave-active {
-  height: 0;
-  transition: height 70ms ease-in;
-}
 
-.filters {
-  order: -1;
-  background: #2c3e50;
-  height: 80px;
-  box-sizing: border-box;
-  color: #ecf0f1;
-  box-shadow: 0 0 2px 1px rgba(0,0,0,0.2);
-  padding: 32px 35px 0;
-  width: calc(100% + 20px);
-  font-weight: 700;
-  border: 0;
-}
-.filters__title, .filter {
-  display: inline-block;
-  margin-right: 30px;
-}
-.filter__label{
-  cursor: pointer;
-}
-[class^="filter__label"] {
-  position: relative;
-  display: inline-block;
-  padding-left: 16px;
-  color: rgba(236,240,241,0.3);
-}
-[class^="filter__label"]:hover {
-  color: #ccc;
-}
-.filter__radio {
-  position: absolute;
-  opacity: 0;
-}
-.filter__radio:checked + [class^="filter__label"] {
-  color: #fff;
-}
-
-[class^="filter__label"]::before,
-.filter__label--all::after {
-  content: '';
-  top: 5px;
-  width: 10px;
-  height: 10px;
-  border-radius: 5px;
-  display: inline-block;
-  position: absolute;
-  box-shadow: 0 0 2px 1px rgba(0,0,0,0.2);
-  background: #647380;
-  left: 0;
-}
-.filter__label--all {
-  padding-left: 21px;
-}
-.filter__label--all::after {
-  left: 5px;
-}
-.filter__radio:checked + .filter__label--all::before {
-  background: #af544f;
-}
-.filter__radio:checked + .filter__label--all::after {
-  background: #16a085;
-}
-
-.filter__radio:checked + .filter__label--active::before {
-  background: #af544f;
-}
-
-.filter__radio:checked + .filter__label--completed::before {
-  background: #16a085;
-}
-
-@media only screen and (min-width : 730px) {
+@media only screen and (min-width : $min-width) {
   .container {
     justify-content: flex-end;
     max-width: 720px;
   }
   .app {
     border-radius: 4px 4px 0 0;
-  }
-  .todo-list {
-    order: -1;
-  }
-  .todo-list {
-    flex-direction: column;
-  }
-  [class^="todo-list__item"] {
-    box-shadow: 0 1px 0 0 #e6e6e6, 0 2px 0 0 white;
-  }
-  .filters {
-    order: 0;
-    border-radius: 3px 3px 0 0;
   }
 }
