--- a/src/styles/scss/_filter.scss
+++ b/src/styles/scss/_filter.scss
@@ -12,19 +12,51 @@
         width: calc(100% + 20px);
         font-weight: 700;
         border: 0;
-        &__title,
 
-        .filter {
+        &__title, .filter {
             display: inline-block;
             margin-right: 30px;
         }
     }
 
+    @mixin label($padding-left: 16px) {
+        position: relative;
+        display: inline-block;
+        padding-left: $padding-left;
+        color: rgba(236, 240, 241, 0.3);
+
+        &:hover {
+            color: #ccc;
+        }
+
+        &::before, .filter__label--all::after {
+            content: '';
+            top: 5px;
+            width: 10px;
+            height: 10px;
+            border-radius: 5px;
+            display: inline-block;
+            position: absolute;
+            box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+            background: #647380;
+            left: 0;
+        }
+    }
+
     &__label {
         cursor: pointer;
+        @include label;
+
+        &--active {
+            @include label;
+        }
+
+        &--completed {
+            @include label;
+        }
 
         &--all {
-            padding-left: 21px;
+            @include label(21px);
 
             &:after {
                 left: 5px;
@@ -32,56 +64,45 @@
         }
     }
 
-    [class^="filter__label"] {
-        position: relative;
-        display: inline-block;
-        padding-left: 16px;
-        color: rgba(236, 240, 241, 0.3);
-
-        &:hover {
-            color: #ccc;
-        }
-    }
-
     &__radio {
+        $none-background: #fff;
+        $active-background: #af544f;
+        $completed-background: #16a085;
+
         position: absolute;
         opacity: 0;
 
-        &:checked+[class^="filter__label"] {
-            color: #fff;
-        }
+        &:checked + .filter__label {
+            &--all {
+                color: $none-background;
 
-        &:checked+.filter__label--all::before {
-            background: #af544f;
-        }
+                &::before {
+                    background: $active-background;
+                }
 
-        &:checked+.filter__label--all::after {
-            background: #16a085;
-        }
+                &::after {
+                    background: $completed-background;
+                }
+            }
 
-        &:checked+.filter__label--active::before {
-            background: #af544f;
-        }
+            &--active {
+                color: $none-background;
 
-        &:checked+.filter__label--completed::before {
-            background: #16a085;
+                &::before {
+                    background: $active-background;
+                }    
+            }
+
+            &--completed {
+                color: $none-background;
+
+                &::before {
+                    background: $completed-background;
+                }
+            }         
         }
     }
 
-}
-
-[class^="filter__label"]::before,
-.filter__label--all::after {
-    content: '';
-    top: 5px;
-    width: 10px;
-    height: 10px;
-    border-radius: 5px;
-    display: inline-block;
-    position: absolute;
-    box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
-    background: #647380;
-    left: 0;
 }
 
 @media only screen and (min-width : $min-width) {
